name:                replace-process
version:             0.1.0.0
synopsis:            Replace the current process with a different executable
description:         Please see README.md
homepage:            https://github.com/fpco/replace-process#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@fpcomplete.com
category:            System
build-type:          Simple
extra-source-files:  README.md ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Process.Replace
  build-depends:       base >= 4.5 && < 5
                     , bytestring
                     , containers
  if os(windows)
    cpp-options:       -DWINDOWS
    build-depends:     process
  else
    build-depends:     unix
  default-language:    Haskell2010

test-suite replace-process-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , replace-process
                     , process
                     , executable-path
                     , hspec
                     , bytestring
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/replace-process
